<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="65dp"
                android:layout_height="75dp"
                android:paddingTop="28dp"
                android:paddingBottom="28dp"
                app:srcCompat="@drawable/ic_back_button" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="65dp"
                android:text="Profile Detail"
                android:maxLines="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/a_white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:adjustViewBounds="true"
                android:background="#070707"
                app:riv_border_color="@color/quite_red"
                app:riv_border_width="2dp"
                app:riv_corner_radius="5dp"
                app:riv_mutate_background="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_balance"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/edi_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="VND"
                        android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/user_fullname"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_fullname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_email"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:inputType="textEmailAddress"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_birthday"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txt_birthday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/rounded_corner_without_border_dark"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:hint="@string/user_format_birthday"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_gender"
            android:textSize="20sp"/>
        <RadioGroup
            android:id="@+id/rad_group_gender"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <RadioButton
                android:id="@+id/rad_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_gender_male"
                android:textSize="17sp"/>
            <RadioButton
                android:id="@+id/rad_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_gender_female"
                android:textSize="17sp"/>
            <RadioButton
                android:id="@+id/rad_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_gender_other"
                android:textSize="17sp"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_phonenumber"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/user_address"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="end"
            android:text="@string/btn_save"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_create"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
