<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/signUpForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/movie_pop_corn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/user_sign_up"
                android:textAlignment="center"
                android:textColor="@color/quite_red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_person_24"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:hint="@string/full_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_mail_outline_24"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_lock_24"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_retype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_lock_24"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:inputType="textPassword"
                android:hint="@string/retype_password"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <CheckBox
                android:id="@+id/chb_terms_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_terms_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_privacy"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_create"
            android:text="@string/btn_create"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingRight="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/string_5"
                android:textColor="@color/text_not_focus"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:onClick="sign_in"
                android:text="@string/string_6"
                android:textColor="@color/quite_red"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>